[tool.poetry]
name = "qenerate"
version = "0.2.2"
description = "Code Generator for GraphQL Query Data Classes"
authors = [
    "Red Hat - Service Delivery - AppSRE <sd-app-sre@redhat.com>"
]
maintainers = [
    "Red Hat - Service Delivery - AppSRE <sd-app-sre@redhat.com>"
]
license = "Apache-2.0"
homepage = "https://github.com/app-sre/qenerate"
repository = "https://github.com/app-sre/qenerate"
documentation = "https://github.com/app-sre/qenerate"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22"
graphql-core = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3"
requests-mock = "^1.9"
types-requests = "^2.27"
flake8 = "^4.0"
pyfakefs = "^4.5"
mypy = "0.961"

[tool.poetry.scripts]
qenerate = 'qenerate.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '^.*\.py$'

[tool.flake8]
max-line-length = 88
